--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -26,7 +26,7 @@ a {
 
 a:hover {
     color: var(--neutral-color-dark-state-gray);
-    font: bold;
+    font-weight: bold;
     text-decoration: underline;
 }
 
