--- a/src/main/resources/static/styles/perfil.css
+++ b/src/main/resources/static/styles/perfil.css
@@ -1,7 +1,7 @@
 
-/* body{
+body{
   background: var(--info-background);
-} */
+}
 /* Estilo para as seções de informação */
 .info-section {
   padding: 1.5rem;
@@ -42,6 +42,9 @@
 
 .topic {
   margin: 1rem 0;
+  text-align: center;
+  width:50%;
+  align-self: center;
 }
 
 .topic-title {
@@ -127,15 +130,15 @@
 /* Responsividade para dispositivos menores */
 @media (max-width: 768px) {
   #first-info {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   #first-info img {
-      margin-bottom: 1rem;
+    margin-bottom: 1rem;
   }
 
   .opportunity-item {
-      width: 100%;
+    width: 100%;
   }
 }
