--- a/src/main/resources/templates/students/info.html
+++ b/src/main/resources/templates/students/info.html
@@ -4,101 +4,160 @@
 <head>
     <meta th:insert="~{/fragments/custom-headfiles :: perfil-headfiles(title='[[${student.name}]]')}">
 
+    <link rel="stylesheet" th:href="@{/styles/students/info.css}">
+
 </head>
-
-
-     <header  th:replace="~{/fragments/header}"></header> <main>
 
 <body>
 
+<header th:replace="~{/fragments/header}"></header>
+<main>
+
+    <body>
+
     <section class="info-section" id="first-info">
-        <img th:src="@{/imgs/default/enterprise-default.png}">
-        <h1 id="name" th:text="${student.name}">Text Content Default</h1>
+        <img th:src="@{/imgs/default/student-boy-default.png}">
+        <h1 id="name" th:text="${#strings.capitalize(student.name)}">João Maria Lobo Alves Palhares Costa
+            Palhinha Gonçalves</h1>
     </section>
 
-    <section class="info-section" id="activity-section">
-        <div class="topic">
-            <h1 class="topic-title">Principal atividade</h1>
-            <p class="topic-content" th:text="${student.principalActivity}">Text Content Default Text Content Default
-                Text Content Default</p>
+    <section class="info-section" id="academic-section">
+        <h1 class="section-title">Dados Acadêmicos</h1>
+        <div class="flex around">
+            <div class="topic">
+                <h1 class="topic-title">Matrícula</h1>
+                <p class="topic-content" th:text="${student.enrollment}">00001112222</p>
+            </div>
+
+            <div class="topic">
+                <h1 class="topic-title">Curso</h1>
+                <p class="topic-content" th:text="${student.course}"> Sistemas de Informação</p>
+            </div>
         </div>
+        <!--
+        <div class="topic">
+            <h1 class="topic-title">Previsão para encerremnto</h1>
+            <p class="topic-content" th:text="${student.role}"> 12/03/2025</p>
+        </div>
+        </div> -->
+
     </section>
 
     <section class="info-section" id="basic-section">
-        <h2 class="section-title">Dados da Empresa</h2>
-
+        <h2 class="section-title">Dados Pessoais</h2>
         <div class="flex around">
             <div class="topic">
-                <h1 class="topic-title">Oportunidades Cadastradas</h1>
-                <p class="topic-content">
-                    <span
-                        th:text="${student.opportunityList != null ? #lists.size(student.opportunityList) : 0}">0</span>
-                    Oportunidades
-                </p>
+                <h1 class="topic-title">Nome Completo</h1>
+                <p class="topic-content" th:text="${student.name}">João Maria Lobo Alves Palhares Costa Palhinha
+                    Gonçalves</p>
             </div>
-
             <div class="topic">
-                <h1 class="topic-title">CNPJ</h1>
-                <p class="topic-content" th:text="${student.cnpj}"></p>
+                <h1 class="topic-title">Data de Nascimento</h1>
+                <p class="topic-content" th:text="${student.birthdate}">09/07/1995</p>
             </div>
+            <!--
+ div class="topic">
+<h1 class="topic-title">Endereço</h1>
+<p class="topic-content" th:text="${student.addres}"></p>
+</div>
+-->
+    </section>
+
+    <section class="info-section" id="competences-section">
+        <h2 class="section-title">Competências</h2>
+
+        <div class="no-content-msg"  th:if="${#lists.isEmpty(student.competenceList)}">
+            <p> De alguma forma, Não há competências</p>
         </div>
 
-        <div class="topic">
-            <h1 class="topic-title">Endereço</h1>
-            <p class="topic-content" th:text="${student.address}">Text Default</p>
-        </div>
+        <ul id="Competence-List" class="flex around" th:each="comptence : ${student.competenceList}">
+            <li th:text="${#strings.capitalize(comptence)}">Isso é uma grande competência</li>
+            <!-- REMOVE THIS AFTER-->
+            <li> Redes de Computador</li>
+            <li> Programação Web</li>
+            <li> Engenharia de Computação em Nuvem</li>
+            <li> Banco de dados relacionais</li>
+            <!-- REMOVE THIS AFTER-->
+        </ul>
 
-        <div class="topic" th:if="${student.urlPage != null and !student.urlPage.isEmpty()}">
-            <h1 class="topic-title">Site Oficial</h1>
-            <p class="topic-content"><a th:href="@{${student.urlPage}}" target="_blank"> Clique aqui para acessar o site
-                    oficial</a></p>
-        </div>
     </section>
 
     <section class="info-section" id="contact-section">
         <h2 class="section-title">Contato</h2>
-        <div class="flex collumn">
-            <div class="flex around">
-                <div class="topic">
-                    <h1 class="topic-title">Email</h1>
-                    <p class="topic-content" th:text="${student.email}"></p>
-                </div>
+        <div class="flex around">
 
-                <div class="topic">
-                    <h1 class="topic-title">Telefone</h1>
-                    <p class="topic-content" th:text="${student.phoneNumber}"></p>
-                </div>
+            <div class="topic">
+                <h1 class="topic-title">Email</h1>
+                <p class="topic-content" th:text="${student.email}">palinha.joao@academico.uepa.edu.br</p>
             </div>
 
             <div class="topic">
-                <h1 class="topic-title">Pessoa Contato</h1>
-                <p class="topic-content" th:text="${student.personContact}"></p>
+                <h1 class="topic-title">Telefone</h1>
+                <p class="topic-content" th:text="${student.phoneNumber}">+55 83 8229-2523 </p>
             </div>
         </div>
     </section>
 
     <section class="info-section" id="oportunity-section">
-        <h2 class="section-title">Oportunidades</h2>
+        <h2 class="section-title">Candidaturas</h2>
 
-        <div th:if="${#lists.isEmpty(student.opportunityList)}">
-            <p>Não há oportunidades disponíveis.</p>
+        <div class="no-content-msg" th:if="${#lists.isEmpty(student.candidatureList)}">
+            <p>Não há registros de candidaturas.</p>
         </div>
-        <div th:each="opportunity : ${student.opportunityList}">
+
+        <div th:each="candidature : ${student.candidatureList}">
+
             <div class="opportunity-item">
-                <h3 th:text="${opportunity.principalActivity}">Principal Atividade</h3>
-                <p><strong>Carga Horária Semanal:</strong> <span th:text="${opportunity.weeklyWorkload}">40 horas</span>
+                <h3>
+                    <a th:href="@{/internshipOffer/info/{id}(id=${candidature.offer.id})}"
+                       th:text="${candidature.offer.principalActivity}">
+                        Principal Atividade
+                    </a>
+                </h3>
+                <p>
+                    <strong>
+                        Empresa:
+                    </strong>
+                    <a th:href="@{/company/info/{id}(id=${candidature.offer.companyResponsible.id})}"
+                       th:text="${candidature.offer.companyResponsible.fantasyName}">
+                        Nome da Empresa
+                    </a>
+
                 </p>
-                <p><strong>Remuneração:</strong> <span th:text="${opportunity.remunerationValue}">R$ 0,00</span></p>
-                <p><strong>Vale Transporte:</strong> <span th:text="${opportunity.transportVoucher}">Sim</span></p>
-                <p><strong>Pré-requisitos:</strong> <span th:text="${opportunity.prerequisites}">Nenhum</span></p>
+                <p>
+                    <strong>Data Candidatura:</strong> <span th:text="${candidature.createdDate }">10/03/2004</span>
+                </p>
+                <!-- Remuneração -->
+                <p th:if="${candidature.offer.remunerationValue != 0}">
+                    <strong>Remuneração:</strong> <span th:text="${candidature.offer.remunerationValue}">R$
+                                0,00</span>
+                </p>
+                <!-- voluntário -->
+                <p th:unless="${candidature.offer.remunerationValue != 0}">
+                    <strong>Estágio Voluntário</strong>
+                </p>
+
+                <!-- Vale Transporte -->
+                <p th:if="${candidature.offer.transportVoucher != 0}">
+                    <strong>Vale Transporte:</strong>R$ <span
+                        th:text="${candidature.offer.transportVoucher}">0,00</span>
+                </p>
+
+                <!-- Pré-requisitos -->
+                <p th:if="${candidature.offer.prerequisites != 0}">
+                    <strong>Pré-requisitos:</strong> <span th:text="${candidature.offer.prerequisites}">Nenhum</span>
+                </p>
+                <div class="button-box">
+                    <button class="btn btn-danger">Cancelar Candidatura</button>
+                </div>
             </div>
         </div>
-        <!--    <button type="button" th:onclick="|window.location.href='@{/internshipOffer/register}'|">Cadastrar oferta</button>-->
     </section>
 
     <div th:replace="~{/fragments/scripts}">
     </div>
-</main> </main> </body>
+</main>
+</body>
 
 
 </html>
