--- a/src/main/resources/templates/students/list.html
+++ b/src/main/resources/templates/students/list.html
@@ -37,10 +37,13 @@
                     <td th:text="${student.phoneNumber}"></td>
                     <td>
                         <div class="action-box">
+                            <a th:href="@{info/{id}(id=${student.id})}" class="btn-action btn-view">Visualizar</a>
+
                             <form th:action="@{/student/delete/{id}(id=${student.id})}" method="post">
                                 <input type="hidden" name="_method" value="DELETE"/>
                                 <input class="btn-action btn-delete" type="submit" value="Remover"/>
                             </form>
+
                         </div>
                     </td>
                 </tr>
