--- a/src/main/resources/static/styles/form.css
+++ b/src/main/resources/static/styles/form.css
@@ -5,11 +5,11 @@
 
 
 .inter-font {
-            font-family: "Inter", sans-serif;
-            font-optical-sizing: auto;
-            font-weight: 900;
-            font-style: normal;
-        }
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+}
 .inter-font-line {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
@@ -22,7 +22,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    background-color: #7F7F7F; /* Cor de fundo clara */
+    background-color: #6cb0fe; /* Cor de fundo clara */
     margin: 50px 0 200px 0;
     height: auto;
 }
@@ -32,8 +32,8 @@
     justify-content: center;
     align-content: center;
     flex-direction: column;
-    background-color: transparent;
-    color: white;
+    background-color: white;
+    color: black;
     width: 500px;
     height: auto;
     border: none;
@@ -47,24 +47,25 @@
     justify-content: center;
     align-content: center;
     flex-direction: column;
-    color: white; /* Cor do texto */
+    /*color: white; !* Cor do texto *!*/
     height: auto;
 }
 
-/* Estilo dos botões de submissão */
 .submit-input {
-    width: 100px;
-    height: 40px;
-    background-color: #007bff; /* Cor de fundo do botão */
-    color: white;
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
+    font-size: 1.1em;
     cursor: pointer;
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s ease;
+
+}
+
+.submit-input:hover {
+    background-color: #0056b3;
 }
 
 /* Estilo do botão ao passar o mouse */
@@ -110,10 +111,10 @@ input[type="date"],
 textarea {
     width: 100%;
     padding: 10px;
-    border: none;
     border-radius: 4px;
     box-sizing: border-box;
-    background-color: #ffffff;
+    background-color: white;
+    border: 1px solid #ced4da;
     color: #495057; /* Cor do texto dentro dos campos */
 }
 
@@ -121,7 +122,6 @@ input[type="text"],
 input[type="number"],
 input[type="date"],
 textarea:active {
-    border: none;
 
 }
 
@@ -129,7 +129,6 @@ textarea:active {
 button[type="submit"] {
     width: 100%;
     background-color: #007bff; /* Cor de fundo do botão */
-    color: white;
     padding: 10px;
     border: none;
     border-radius: 4px;
@@ -157,4 +156,30 @@ button[type="submit"]:hover {
     justify-items: center;
     justify-content: center ;
     flex-direction: row;
+}
+
+.custom-select {
+    appearance: none; /* Remove a aparência padrão do navegador */
+    -webkit-appearance: none; /* Remove a aparência no Safari */
+    -moz-appearance: none; /* Remove a aparência no Firefox */
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: 1px solid #007bff;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+}
+.custom-file-upload {
+    width: fit-content;
+    cursor: pointer;
+    background-color: #007bff;
+    color: white;
+    padding: 8px;
+    font-size: 14px;
+;
+}
+
+.custom-file-upload:hover {
+    background-color: #0056b3;
 }
