--- a/src/main/resources/templates/students/list.html
+++ b/src/main/resources/templates/students/list.html
@@ -14,7 +14,7 @@
             <a th:href="@{/student/register}">
                 <button class="button-add btn btn-primary">Novo Aluno</button>
             </a>
-            <table border="1">
+            <table border="1" class="d-none">
                 <thead>
                 <tr>
                     <th>ID</th>
@@ -49,6 +49,48 @@
                 </tr>
                 </tbody>
             </table>
+
+            <div class="father-card">
+                <div class="individual-student-card inter-font" th:each="student : ${students}">
+                    <h3 th:text="${student.name}"></h3>
+                    <div class="d-flex flex-row gap-2">
+                        <div class="d-flex flex-column">
+                            <smal>ID:</smal>
+                            <p th:text="${student.id}"></p>
+                        </div>
+                        <div class="d-flex flex-column">
+                            <smal>Matrícula:</smal>
+                            <p th:text="${student.enrollment}"></p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row gap-2">
+                        <div class="d-flex flex-column">
+                            <smal>Curso:</smal>
+                            <p th:text="${student.course}"></p>
+                        </div>
+                        <div class="d-flex flex-column">
+                            <smal>Email:</smal>
+                            <p th:text="${student.email}"></p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row gap-2">
+                        <div class="d-flex flex-column">
+                            <smal>Telefone:</smal>
+                            <p th:text="${student.phoneNumber}"></p>
+                        </div>
+                    </div>
+                    <div class="action-box d-flex gap-2 justify-content-center mt-3">
+                        <a th:href="@{info/{id}(id=${student.id})}" class="btn-action btn-view">
+                            Visualizar
+                        </a>
+                        <form th:action="@{/student/delete/{id}(id=${student.id})}" method="post">
+                            <input type="hidden" name="_method" value="DELETE"/>
+                            <input class="btn-action btn-delete" type="submit" value="Remover"/>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
     <div th:replace="~{/fragments/scripts}"></div>
