style: Estilizando list de empresas
- Implementando cards para melhor vizualização de informações

--- a/src/main/resources/static/styles/company/list-company.css
+++ b/src/main/resources/static/styles/company/list-company.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    background-color: #f0f4f8; /* Cor de fundo clara */
+    background-color: #6cb0fe; /* Cor de fundo clara */
     padding: 40px 0;
     width: 100%;
 }
