--- a/src/main/resources/templates/companies/list.html
+++ b/src/main/resources/templates/companies/list.html
@@ -2,6 +2,7 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="../../static/styles/list.css"/>
     <meta th:insert="~{/fragments/custom-headfiles :: list-headfiles(title='Empresas')}">
 
 
@@ -20,7 +21,7 @@
                     Nova Empresa
                 </button>
             </a>
-            <table class="w-auto">
+            <table class="w-auto d-none">
                 <thead>
                     <tr>
                         <th>ID</th>
@@ -48,16 +49,70 @@
                         <td th:text="${company.urlPage}">td>
                         <td>
                             <div class="action-box">
-                                <a th:href="@{/company/info/{id}(id=${company.id})}" class="btn-action btn-view">Visualizar</a>
+                                <a th:href="@{/company/info/{id}(id=${company.id})}" class="btn-action btn-view">
+                                    <i class="bi bi-binoculars-fill"></i></a>
                                 <form th:action="@{/company/delete/{id}(id=${company.id})}" method="post">
                                     <input type="hidden" name="_method" value="DELETE" />
-                                    <input class="btn-action btn-delete" type="submit" value="Remover" />
+                                    <button class="btn-action btn-delete" type="submit" value="" >
+                                    <i  class="bi bi-trash-fill"></i> </button>
+
                                 </form>
                             </div>
                         </td>
                     </tr>
                 </tbody>
             </table>
+
+
+            <div class="father-card col-md-6 col-lg-6 ">
+                <div class="individual-company-card inter-font " th:each="company :${companies}">
+
+                    <a  th:href="${company.urlPage}"><h3 th:text="${company.fantasyName}"></h3></a>
+                    <div class="d-flex flex-row gap-2">
+                        <p> Num.ID [[${company.id}]]</p>
+                        <smal>CNPJ</smal>
+                        <p th:text="${company.cnpj}"></p>
+                    </div>
+
+                    <smal>Principal Atividade</smal>
+                    <p class="inter-font text-sm" th:text="${company.principalActivity}"></p>
+                    <div class="d-flex flex-row gap-3">
+                        <!-- Email e Telefone -->
+                        <div class="d-flex flex-column">
+                            <smal>Email:</smal>
+                            <p th:text="${company.email}"></p>
+                        </div>
+                        <div class="d-flex flex-column">
+                            <smal>Telefone:</smal>
+                            <p th:text="${company.phoneNumber}"></p>
+                        </div>
+
+                    </div>
+                    <div class="d-flex flex-row gap-3">
+                        <div class="d-flex flex-column">
+                            <smal>Contato:</smal>
+                            <p th:text="${company.personContact}"></p>
+                        </div>
+                        <div class="d-flex flex-column">
+                            <smal>Endereço:</smal>
+                            <p th:text="${company.address}"></p>
+                        </div>
+                    </div>
+
+                 <div >
+                     <div class="action-box">
+                         <a th:href="@{/company/info/{id}(id=${company.id})}" class="btn-action btn-view">
+                             <i class="bi bi-binoculars-fill"></i></a>
+                         <form th:action="@{/company/delete/{id}(id=${company.id})}" method="post">
+                             <input type="hidden" name="_method" value="DELETE" />
+                             <button class="btn-action btn-delete" type="submit" value="" >
+                                 <i  class="bi bi-trash-fill"></i> </button>
+
+                         </form>
+                     </div>
+                 </div>
+                </div>
+            </div>
 
             <div th:replace="~{/fragments/scripts}">
             </div>
